--- a/style.css
+++ b/style.css
@@ -92,18 +92,6 @@
 
 /*----------------------------------------------------------------------------------------------------------------------------*/
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.time-ago {
+    float: right;
+}
